--- a/package.json
+++ b/package.json
@@ -7,7 +7,16 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "preinstall": "node scripts/pre-install.js",
+    "appium": "appium",
+    "build:android": "scripts/build-android.sh",
+    "build:ios": "scripts/build-ios.sh",
+    "test:android": "appium-helper --platform android",
+    "test:ios": "appium-helper --platform ios",
+    "test:local-e2e": "OS=both scripts/run-local-tests.sh",
+    "run-emulator:android": "scripts/run-android-emulator.sh",
+    "kill-emulator:android": "scripts/kill-android-emulator.sh"
   },
   "dependencies": {
     "react": "16.9.0",
