--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,6 @@ android:
     - extra-android-m2repository
     - extra-google-m2repository
     - extra-google-google_play_services
+script: 
+- npm run ci 
+- cd android && ./gradlew assembleRelease
