--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 os: linux
 language: android
+before_install:
+- nvm install 6
+- node --version
+install:
+- npm install
 jdk: oraclejdk8
 sudo: required
 android:
