--- a/.travis.yml
+++ b/.travis.yml
@@ -4,20 +4,20 @@ before_install:
 - nvm install 6
 - node --version
 install:
-- npm install
+- yarn install
 jdk: oraclejdk8
 sudo: required
-android:
-  components:
-    - platform-tools
-    - tools
-    - build-tools-26.0.3
-    - android-21
-    - android-26
-    - sys-img-armeabi-v7a-android-21
-    - extra-android-m2repository
-    - extra-google-m2repository
-    - extra-google-google_play_services
+# android:
+#   components:
+#     - platform-tools
+#     - tools
+#     - build-tools-26.0.3
+#     - android-21
+#     - android-26
+#     - sys-img-armeabi-v7a-android-21
+#     - extra-android-m2repository
+#     - extra-google-m2repository
+#     - extra-google-google_play_services
 script: 
 - npm run ci 
 - cd android && ./gradlew assembleRelease
