--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,15 @@ language: android
 before_install:
 - nvm install 6
 - node --version
+- sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
+- echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+- sudo apt-get update -qq
+- sudo apt-get install -y -qq yarn
 install:
 - yarn install
 jdk: oraclejdk8
 sudo: required
+cache: true
 # android:
 #   components:
 #     - platform-tools
