--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ language: android
 before_install:
 - nvm install 6
 - node --version
-- sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
+- apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
 - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-- sudo apt-get update -qq
-- sudo apt-get install -y -qq yarn
+- apt-get update -qq
+- apt-get install -y -qq yarn
 install:
 - yarn install
 jdk: oraclejdk8
