--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,9 @@ language: android
 before_install:
 - nvm install 6
 - node --version
-- apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
-- echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-- apt-get update -qq
-- apt-get install -y -qq yarn
 install:
-- yarn install
+- npm install
 jdk: oraclejdk8
-sudo: required
 cache: 
   yarn: true
 # android:
@@ -24,6 +19,6 @@ cache:
 #     - extra-android-m2repository
 #     - extra-google-m2repository
 #     - extra-google-google_play_services
-script: 
-- npm run ci 
-- cd android && ./gradlew assembleRelease
+# script: 
+# - npm run ci 
+# - cd android && ./gradlew assembleRelease
